# MindMap

./: .gitignore  CONTRIBUTING.md  Mindmap.py  README.md  config.toml  middleware.ts  package.json  pnpm-lock.yaml  streamlit_app.py  streamlit_mindtrack.py  streamlit_mindtrack_cloud.py  streamlit_mindtrack_complete.py  test_app.py
ml/: .gitignore  DATA_DICTIONARY.md  HANDOFF.md  LABELS_AND_INSTRUMENTS.md  MINDMAP_PIPELINE_DESIGN.md  MODEL_CARD.md  PRODUCTION_READINESS.md  README.md  SAFETY_POLICY.md  VALIDATION_PLAN.md  pyproject.toml
ml/mindmap_ml/: __init__.py  config.py  schema.py
ml/mindmap_ml/eval/: __init__.py  baseline.py  compare.py  harness.py  metrics.py  reports.py  run.py  walk_forward.py
ml/mindmap_ml/evidence/: __init__.py  curate.py  index.py  ingest.py  retrieve.py
ml/mindmap_ml/features/: __init__.py  calendar.py  engineering.py  spec.py
ml/mindmap_ml/graph/: __init__.py  calibrate.py  evaluate.py  evidence_scorer.py  (+7 more)
ml/tests/: test_baseline.py  test_calendar.py  test_clinician_summary.py  test_descriptive.py  test_evidence.py  test_evidence_scorer.py  test_features.py  test_forecast.py  test_graph_batch.py  test_graph_calibrate.py  test_graph_evaluate.py  test_graph_generate.py  test_graph_ingest.py  test_graph_obsidian.py  test_graph_pipeline.py  test_graph_verify.py  test_harness.py  test_insights.py  test_instruments.py  test_metrics.py  test_naive_forecast.py  test_narrative.py  test_power.py  test_response.py  test_safety.py  test_scaffold.py  test_schema.py  test_serving.py  test_summary_batch.py  test_synthetic.py  test_walk_forward.py
(+323 files in other folders)
